Images are being displayed now
