# dragon-core/dragon_core/api/API_specification.yaml
@@ -626,45 +626,6 @@ paths:
         "200":
           description: "Successfully read parents"
 
-  /properties/image:
-    post:
-      operationId: "dragon_core.api.entities.add_image"
-      tags:
-        - Properties
-        - Images
-      summary: "Uploads an image to the server"
-      requestBody:
-        description: "Image to upload"
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: "object"
-              properties:
-                image:
-                  type: "string"
-                  format: "binary"
-      responses:
-        "200":
-          description: "Successfully uploaded image"
-        "400":
-          description: "Invalid image"
-
-  /properties/image/{imagePath}:
-    get:
-      operationId: "dragon_core.api.entities.read_image"
-      tags:
-        - Properties
-        - Images
-      summary: "Returns the image of the entity with the given ID"
-      parameters:
-        - $ref: "#/components/parameters/imagePath"
-      responses:
-        "200":
-          description: "Successfully read entity image"
-        "404":
-          description: "Image not found"
-
   /properties/data_suggestions/{ID}:
     get:
       operationId: "dragon_core.api.entities.get_data_suggestions"
